--- a/index.html
+++ b/index.html
@@ -384,14 +384,14 @@
     <button class="button main__button" type="button" onclick="window['dialog-id'].showModal();"
     aria-controls="dialog-id">
       <svg class="floppy" width="21" height="21" viewBox="0 0 21 21">
-        <use href="svg/floppy.svg#floppy">
+        <use href="svg/floppy.svg#floppy"/>
       </svg>
       <span class="button__text main__button-text">Сохранить на память</span>
     </button>
     <dialog id="dialog-id" class="dialog">
       <div class="wrapper__dialog">
         <svg class="dialog__icon" width="21" height="21" viewBox="0 0 21 21">
-          <use href="svg/floppy.svg#floppy">
+          <use href="svg/floppy.svg#floppy"/>
         </svg>
         <p class="dialog__text">Вставьте
           дискету, чтобы
