Первое ревью - исправлено

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
 <body class="page">
   <header class="header content">
-    <h1 class="header__title">&lt;/html&gt;</h1>
-    <h2 class="header__subtitle">закрывающий тег</h2>
+    <a class="header__title">&lt;/html&gt;</a>
+    <h1 class="header__subtitle">закрывающий тег</h1>
     <nav class="theme-menu header__theme-menu">
       <!-- Не меняйте разметку этого списка, иначе скрипты перестанут работать -->
       <ul class="theme-menu__list">
@@ -47,12 +47,12 @@
     <ul class="main__list">
       <li class="main__item">
         <article class="main__card">
-          <h3 class="card__title">
+          <h2 class="card__title">
             Фритрек и нулевой спринт: Подготовка к работе
-          </h3>
+          </h2>
           <div class="card__image-wrapper">
             <p class="wrapper__text">&lt;/воодушевление&gt;</p>
-            <img src="images/first.gif" alt="" class="card__image card__image-first">
+            <img src="images/first.gif" alt="Придорожное азиатское кафе" class="card__image card__image-first">
           </div>
           <div class="card__information">
             <p class="card__text">Это было самое начало пути. На этом этапе важно было проникнуться основами и
@@ -88,12 +88,12 @@
       </li>
       <li class="main__item">
         <article class="main__card">
-          <h3 class="card__title">
+          <h2 class="card__title">
             1 спринт: Я — чистый лист
-          </h3>
+          </h2>
           <div class="card__image-wrapper">
             <p class="wrapper__text">&lt;/уверенность&gt;</p>
-            <img src="images/second.gif" alt="" class="card__image card__image-second">
+            <img src="images/second.gif" alt="Комната девушки-геймера в Японии" class="card__image card__image-second">
           </div>
           <div class="card__information">
             <p class="card__text">На первых этапах мы работали со страхами и сомнениями, которые часто испытывают
@@ -131,12 +131,12 @@
       </li>
       <li class="main__item">
         <article class="main__card">
-          <h3 class="card__title">
+          <h2 class="card__title">
             1 спринт: А если не получится?
-          </h3>
+          </h2>
           <div class="card__image-wrapper">
             <p class="wrapper__text">&lt;/удовлетворение&gt;</p>
-            <img src="images/third.gif" alt="" class="card__image card__image-third">
+            <img src="images/third.gif" alt="Девушка поливает цветы у зоомагазина" class="card__image card__image-third">
           </div>
           <div class="card__information">
             <p class="card__text">Первый проект — позади! Но это всё ещё самое начало пути. Радость могла быстро
@@ -173,12 +173,12 @@
       </li>
       <li class="main__item">
         <article class="main__card">
-          <h3 class="card__title">
+          <h2 class="card__title">
             2 спринт: Погоня за идеалом
-          </h3>
+          </h2>
           <div class="card__image-wrapper">
             <p class="wrapper__text">&lt;/доступность&gt;</p>
-            <img src="images/fourth.gif" alt="" class="card__image card__image-fourth">
+            <img src="images/fourth.gif" alt="Люди в кафе смотрят на проходящую толпу за окном" class="card__image card__image-fourth">
           </div>
           <div class="card__information">
             <p class="card__text">На этом этапе вы уже достаточно разбирались в основах вёрстки, чтобы понять, как много
@@ -215,12 +215,12 @@
       </li>
       <li class="main__item">
         <article class="main__card">
-          <h3 class="card__title">
+          <h2 class="card__title">
             2 спринт: О тех, кто рядом
-          </h3>
+          </h2>
           <div class="card__image-wrapper">
             <p class="wrapper__text">&lt;/общение&gt;</p>
-            <img src="images/fifth.gif" alt="" class="card__image card__image-fifth">
+            <img src="images/fifth.gif" alt="Азиатская аптека в дождь" class="card__image card__image-fifth">
           </div>
           <div class="card__information">
             <p class="card__text">Всё это время вы были не одиноки (хотя, возможно, иногда и чувствовали, что одни
@@ -257,12 +257,12 @@
       </li>
       <li class="main__item">
         <article class="main__card">
-          <h3 class="card__title">
+          <h2 class="card__title">
             3 спринт: Обходные стратегии
-          </h3>
+          </h2>
           <div class="card__image-wrapper">
             <p class="wrapper__text">&lt;/угасание&gt;</p>
-            <img src="images/sixth.gif" alt="" class="card__image card__image-sixth">
+            <img src="images/sixth.gif" alt="Ночной проспект киберпанк города" class="card__image card__image-sixth">
           </div>
           <div class="card__information">
             <p class="card__text">На этом курсе вы постоянно решали разные задачи. В какой-то момент вам могло
@@ -298,12 +298,12 @@
       </li>
       <li class="main__item">
         <article class="main__card">
-          <h3 class="card__title">
+          <h2 class="card__title">
             3 спринт: Когда опускаются руки
-          </h3>
+          </h2>
           <div class="card__image-wrapper">
             <p class="wrapper__text">&lt;/прокрастинация&gt;</p>
-            <img src="images/seventh.gif" alt="" class="card__image card__image-seventh">
+            <img src="images/seventh.gif" alt="Мальчик сидит на крыше во время наводнения" class="card__image card__image-seventh">
           </div>
           <div class="card__information">
             <p class="card__text">Во время учёбы часто возникает чувство, когда не знаешь, за что хвататься. Вроде и
@@ -339,12 +339,12 @@
       </li>
       <li class="main__item">
         <article class="main__card">
-          <h3 class="card__title">
+          <h2 class="card__title">
             «Сейчас я здесь»
-          </h3>
+          </h2>
           <div class="card__image-wrapper">
             <p class="wrapper__text">&lt;/усталость&gt;</p>
-            <img src="images/eighth.gif" alt="" class="card__image card__image-eighth">
+            <img src="images/eighth.gif" alt="Парень играет в автомат с игрушками" class="card__image card__image-eighth">
           </div>
           <div class="card__information">
             <p class="card__text">Сейчас вы уже очень много знаете о вёрстке. Но это только начало. Во-первых, впереди
@@ -397,9 +397,11 @@
           дискету, чтобы
           продолжить</p>
       </div>
-      <button class="close__button button" type="button" onclick="window['dialog-id'].close();">
-        <span class="button__text">ОК</span>
-      </button>
+      <form method="dialog">
+        <button class="close__button button" type="submit">
+          <span class="button__text">ОК</span>
+        </button>
+      </form>
     </dialog>
   </main>
   <script src="./scripts/like.js"></script>
